# Estrutura-de-Dados

ED1_IMPLEMENTACAO_1_MATRIZES/: apl.c  matrix.c  matrix.h  readme.txt
ED1_IMPLEMENTAÇÃO_2_COLEÇÃO_GENERICA/: CMakeLists.txt  ColMain.c  colecao.c  colecao.h  readme.txt
ED1_IMPLEMENTAÇÃO_3_LISTAS/: Makefile  readme.txt
ED1_IMPLEMENTAÇÃO_3_LISTAS/src/: SLLMain.c  lista.h  sll.c
ED1_IMPLEMENTAÇÃO_4_ARVORE/arvores/: TREE.c  readme.txt
ED1_IMPLETAÇÃO_4_ARVORE/arvores/: Tree.h  main.c  readme.txt
ED2_IMPLEMENTACAO_2_HASH-TREE/: relatorio_execucao.txt  relatorio_pratica2.md  transacoes.csv
ED2_IMPLEMENTACAO_2_HASH-TREE/src/estruturas/: Arvore.java  TreeAVL.java  TreeRB.java
ED2_IMPLEMENTACAO_2_HASH-TREE/src/hash/: HashHibrida.java  HashTentativaLinear.java
ED2_IMPLEMENTACAO_2_HASH-TREE/src/model/: Transacao.java
ED2_IMPLEMENTACAO_2_HASH-TREE/src/testes/: HashHibridaTest.java  Main.java
ED2_IMPLEMENTACAO_2_HASH-TREE/v2/src/hash/: HashTableHibrida.java  HashUtils.java
ED2_IMPLEMENTAÇÃO_1_ORDENAÇÃO/: HeapOrdenadoprodutos_10000.txt  ListaEncadeadaOrdenadaprodutos_10000.txt  QuickOrdenadoprodutos_10000.txt  ShellOrdenadoprodutos_10000.txt  hs_err_pid18924.jfr  produtos_1000.txt  produtos_10000.txt
ED2_IMPLEMENTAÇÃO_1_ORDENAÇÃO/src/: GeradorProduto.java  Main.java
ED2_IMPLEMENTAÇÃO_1_ORDENAÇÃO/src/model/: NodeProduto.java  Produto.java
ED2_IMPLEMENTAÇÃO_1_ORDENAÇÃO/src/service/: Controladores.java  HeapSort.java  InsertionSort.java  LerProdutos.java  ListaEncadeadaProduto.java  QuickSort.java  SelectionSort.java  ShellSort.java
(+12 files in other folders)
